# DistributedFileParsingSystem

./: CMakeLists.txt  README.md
build-managerplatform-Desktop_Qt_5_12_5_GCC_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  managerplatform  managerplatform.cbp
build-managerplatform-Desktop_Qt_5_12_5_GCC_64bit-Debug/managerplatform_autogen/: moc_predefs.h  mocs_compilation.cpp
build-managerplatform-Desktop_Qt_5_12_5_GCC_64bit-Debug/managerplatform_autogen/EWIEGA46WW/: moc_client_thread.cpp  moc_dialog.cpp
build-managerplatform-Desktop_Qt_5_12_5_GCC_64bit-Debug/managerplatform_autogen/include/: ui_dialog.h
fileparsing/: FileParsing_main.cpp
fileparsing/src/: file_parsing.cpp  file_parsing.h  parsing_state.cpp  parsing_state.h  recording_log.cpp  recording_log.h  state.h  wating_state.cpp  wating_state.h
managerplatform/: CMakeLists.txt  client_thread.cpp  client_thread.h  dialog.cpp  dialog.h  dialog.ui  main.cpp
src/: client.cpp  client.h  server.cpp  server.h  specifictime.h
taskdistribution/: TaskDistribution_main.cpp
taskdistribution/src/: distribution_server.cpp  distribution_server.h
workstation/: WorkStation_main.cpp
workstation/src/: send_directory.cpp  send_directory.h
